# text-to-sql

./: .env.example  .gitignore  README.md  pyproject.toml  requirements.txt  setup_db.py
data/: .gitkeep
examples/: sample_queries.json
src/: __init__.py  cli.py  config.py  database.py  feedback.py  interface.py  security.py  translator.py  validator.py  web.py
tests/: __init__.py  test_feedback.py  test_security.py  test_validator.py
